--- a/index.html
+++ b/index.html
@@ -1,1 +1,133 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
+</head>
+
+<body>
+    <header>
+        <h1>Hi! I'm Huzayfa</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="showcase.html">Showcase</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <!-- Self-assessment -->
+    <section class="self-assessment">
+        <h2>Professional Self-Assessment</h2>
+        <p>Throughout my academic experience in the Computer Science program, I have acquired essential knowledge and
+            practical experience that have significantly enhanced my technical skills, problem-solving capabilities, and
+            professional values. I have engaged in various projects and coursework that have refined my abilities and
+            equipped me for a successful career in the field of computer science.</p>
+
+        <h3>Growth</h3>
+        <p>From the initial stages of the program, I aimed to expand on my technical expertise and apply theoretical
+            knowledge to real-world scenarios. Some of my most important takeaways have been the ability to design,
+            develop,
+            and optimize software solutions that align with industry best practices.</p>
+        <p>I have gained hands-on experience in full-stack web development, data structures and algorithms, database
+            management, and cybersecurity. The coursework has reinforced these concepts and allowed me to incorporate
+            them
+            into a portfolio that showcases my capabilities. Developing my ePortfolio has been a crucial component in
+            demonstrating my strengths and establishing my professional goals.</p>
+        <p>With continuous enhancements to my artifacts, I have significantly improved my ability to assess design
+            trade-offs,
+            implement innovative solutions, and justify my technical decisions.</p>
+
+        <h2>Core Competencies and Key Skills</h2>
+
+        <h3>Collaborating in a Team Environment</h3>
+        <p>I have developed a solid understanding of how software development is structured in an industrial setting.
+            Through various projects involving real-world scenarios and research, I have learned about several key
+            aspects
+            of collaboration in a team environment, including:</p>
+        <ul>
+            <li>Agile and Scrum methodologies, which emphasize iterative development, collaboration, and adaptability.
+            </li>
+            <li>Various stages of the software development lifecycle (SDLC), including requirements gathering, design,
+                implementation, testing, and deployment.</li>
+            <li>Version control systems like Git, which facilitate collaborative coding and efficient project
+                management.</li>
+        </ul>
+
+        <h3>Communicating with Stakeholders</h3>
+        <p>In addition to technical skills, communicating with stakeholders is crucial in the field of computer science.
+            Throughout the program, I have practiced this skill by developing technical documentation and presentations
+            that describe software solutions and justify design choices. This has strengthened my ability to communicate
+            effectively with both technical and non-technical audiences, ensuring that my proposed solutions align with
+            business objectives.</p>
+
+        <h3>Data Structures and Algorithms</h3>
+        <p>Data structures and algorithms are fundamental to building large-scale and efficient applications. I have
+            worked
+            with various data structures such as hash tables, trees, and linked lists, and I have experience selecting
+            appropriate structures for specific problems.</p>
+        <p>For example, I have implemented sorting algorithms like Merge Sort to optimize data preprocessing and used
+            graph
+            algorithms for tasks such as network routing. Additionally, I have applied search optimization techniques
+            like
+            binary search for faster data retrieval and used trie data structures for search engines. These experiences
+            have strengthened my ability to analyze and apply algorithmic solutions that enhance application efficiency
+            and scalability.</p>
+
+        <h3>Software Engineering and Databases</h3>
+        <p>Software engineering principles have guided me in designing and developing scalable, maintainable
+            applications.
+            Throughout the program, I have applied concepts such as object-oriented programming (OOP), design patterns,
+            and software architecture best practices.</p>
+        <p>Additionally, I have worked extensively with relational databases such as SQL, designing efficient schemas,
+            normalizing data, and optimizing queries. I have also explored NoSQL databases for handling unstructured
+            data.
+            With my understanding of indexing techniques and query optimization strategies, I have successfully built
+            efficient and scalable data-driven applications.</p>
+
+        <h3>Security Awareness and Best Practices</h3>
+        <p>Security is a fundamental aspect of software development. I have incorporated best practices into my projects
+            to
+            protect against vulnerabilities. I have experience with both static and dynamic security testing, as well as
+            secure coding techniques such as encryption, secure authentication and authorization, and secure data
+            storage.</p>
+
+        <h2>ePortfolio Overview</h2>
+        <p>The artifacts included in my ePortfolio highlight my skills and abilities across various computer science
+            disciplines. One key artifact is a full-stack web application I developed as part of my coursework for
+            <strong>CS 465: Full-Stack Development</strong>. I chose this project because it demonstrates multiple core
+            competencies, including:
+        </p>
+        <ul>
+            <li>Full-stack application development.</li>
+            <li>Integration of external APIs for real-time functionality.</li>
+            <li>Implementation of optimized algorithms for efficiency.</li>
+            <li>Secure coding practices.</li>
+            <li>Effective communication of technical concepts.</li>
+            <li>Justification of design choices, algorithms, and trade-offs in decision-making.</li>
+        </ul>
+
+        <h2>Program Learning Outcomes</h2>
+        <p>Through my coursework and projects, I have met the following learning outcomes:</p>
+        <ol>
+            <li>Employ strategies for building collaborative environments that enable diverse audiences to support
+                organizational decision-making in the field of computer science.</li>
+            <li>Design, develop, and deliver professional-quality oral, written, and visual communications that are
+                coherent, technically sound, and appropriately adapted to specific audiences and contexts.</li>
+            <li>Design and evaluate computing solutions that solve a given problem using algorithmic principles and
+                computer science best practices while managing trade-offs in design choices.</li>
+            <li>Demonstrate an ability to use well-founded and innovative techniques, skills, and tools in computing
+                practices to implement solutions that deliver value and achieve industry-specific goals.</li>
+            <li>Develop a security mindset that anticipates adversarial exploits in software architecture and design to
+                expose potential vulnerabilities, mitigate design flaws, and ensure the privacy and security of data
+                and resources.</li>
+        </ol>
+    </section>
+</body>
+
+</html>
