--- a/showcase.html
+++ b/showcase.html
@@ -21,11 +21,33 @@
         </nav>
     </header>
 
-    <!-- Code Review -->
-    <h2>Code review video:</h2>
-    <iframe title="vimeo-player" src="https://player.vimeo.com/video/1059612772?h=ea5995d03d" width="640" height="360"
-        frameborder="0" allowfullscreen></iframe>
-    <!-- -->
+    <div id="overview-container">
+        <div class="text-area">
+            <h2>Artifact Overview</h2>
+            <p>
+                The artifact that I chose is a full-stack web application that I developed as part of my coursework for
+                CS 465: Full-Stack Development in my previous term. The application is a travel web application
+                developed using the MEAN (MongoDB, Express, Angular, and Node.js) stack framework. The features include
+                a customer-facing website where users could view a list of different travel packages and an admin portal
+                for managing these travel packages. Additionally, the admin page includes a login portal to authorize
+                users before they can edit or add travel packages.
+            </p>
+        </div>
+
+        <div class="divider"></div>
+
+        <div class="video-area">
+            <h2>Code Review Video</h2>
+            <iframe title="vimeo-player" src="https://player.vimeo.com/video/1059612772?h=ea5995d03d" width="100%"
+                height="360" frameborder="0" allowfullscreen></iframe>
+        </div>
+    </div>
+
+    <div id="artifact-container">
+        <h2>Original Work</h2>
+        <a href="https://github.com/hzyfaa/Full-Stack" target="_blank" rel="noopener noreferrer"
+            title="Original Artifact">View on GitHub</a>
+    </div>
 </body>
 
 </html>
