--- a/showcase.html
+++ b/showcase.html
@@ -47,6 +47,61 @@
         <h2>Original Work</h2>
         <a href="https://github.com/hzyfaa/Full-Stack" target="_blank" rel="noopener noreferrer"
             title="Original Artifact">View on GitHub</a>
+        <video width="320" height="240" controls>
+            <source src="./demos/origDemo.mp4" type="video/mp4">
+            **Not Supported**
+        </video>
+    </div>
+
+    <!-- Enh 1 -->
+    <div class="enh-container">
+        <h2>Software Engineering and Design</h2>
+
+        <div class="narrative">
+            <p>Clients can only view preloaded trips. To make the app more practical, I implemented an external API that
+                could be used to retrieve travel data such as flights, hotels, etc. Additionally, some UI features were
+                improved for a more modern and engaging look. Finally, the user should be able to search for locations
+                using a
+                search functionality.
+            </p>
+
+            <h3>Outcomes:</h3>
+            <ul>
+                <li>
+                    Design, develop, and deliver professional-quality oral, written, and visual communications that are
+                    coherent, technically sound, and appropriately adapted to specific audiences and contexts.
+                </li>
+
+                <li>
+                    Develop a security mindset that anticipates adversarial exploits in software architecture and
+                    designs to expose potential vulnerabilities, mitigate design flaws, and ensure privacy and enhanced
+                    security of data and resources.
+                </li>
+
+                <li>
+                    Demonstrate an ability to use well-founded and innovative techniques, skills, and tools in
+                    computing practices for the purpose of implementing computer solutions that deliver value and
+                    accomplish industry-specific goals.
+                </li>
+            </ul>
+
+            <p class="reflection">
+                I found a lot of code from the original work that was either not required or redundant and have been
+                working on cleaning these areas up. The most challenging part was finding an appropriate API for what
+                I'm trying to achieve.
+            </p>
+
+        </div>
+    </div>
+
+    <!-- Enh 2 -->
+    <div class="enh-container">
+        <h2>Algorithms and Data Structures</h2>
+    </div>
+
+    <!-- Enh 3 -->
+    <div class="enh-container">
+        <h2>Databases</h2>
     </div>
 </body>
 
