--- a/showcase.html
+++ b/showcase.html
@@ -67,7 +67,7 @@
     <!-- Enhancement 1 Section: Software Engineering and Design -->
     <section class="enh-container">
         <h2 class="enh-header">Software Engineering and Design</h2>
-        <a href="<!-- INSERT GITHUB LINK -->" class="github-link" target="_blank">View on GitHub</a>
+        <a href="https://github.com/hzyfaa/499-ENH1.git" class="github-link" target="_blank">View on GitHub</a>
 
         <div class="enh-grid">
             <!-- Description Block -->
@@ -128,7 +128,7 @@
     <!-- Enhancement 2 Section: Algorithms and Data Structures -->
     <section class="enh-container">
         <h2 class="enh-header">Algorithms and Data Structures</h2>
-        <a href="<!-- INSERT GITHUB LINK -->" class="github-link" target="_blank">View on GitHub</a>
+        <a href="https://github.com/hzyfaa/499-ENH2.git" class="github-link" target="_blank">View on GitHub</a>
 
         <div class="enh-grid">
             <div class="enh-description">
@@ -150,7 +150,6 @@
             <!-- Outcomes Block -->
             <div class="enh-outcomes">
                 <h3>Outcomes:</h3>
-
                 <p>
                     - Design and evaluate computing solutions that solve a given problem using algorithmic principles
                     and
@@ -193,7 +192,7 @@
     <!-- Enhancement 3 Section: Databases -->
     <section class="enh-container">
         <h2>Databases</h2>
-        <a href="<!-- INSERT GITHUB LINK -->" class="github-link" target="_blank">View on GitHub</a>
+        <a href="https://github.com/hzyfaa/499-ENH3.git" class="github-link" target="_blank">View on GitHub</a>
 
         <div class="enh-grid">
             <div class="enh-description">
